// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollSnapPaddingLeft renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-left: 0;
  -moz-scroll-snap-padding-left: 0;
  -ms-scroll-snap-padding-left: 0;
  scroll-snap-padding-left: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: 0;
  -moz-scroll-snap-padding-left: 0;
  -ms-scroll-snap-padding-left: 0;
  scroll-snap-padding-left: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: 0;
  -moz-scroll-snap-padding-left: 0;
  -ms-scroll-snap-padding-left: 0;
  scroll-snap-padding-left: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: 0;
  -moz-scroll-snap-padding-left: 0;
  -ms-scroll-snap-padding-left: 0;
  scroll-snap-padding-left: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingLeft renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-left: hasnot;
  -moz-scroll-snap-padding-left: hasnot;
  -ms-scroll-snap-padding-left: hasnot;
  scroll-snap-padding-left: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: has;
  -moz-scroll-snap-padding-left: has;
  -ms-scroll-snap-padding-left: has;
  scroll-snap-padding-left: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: hasnot;
  -moz-scroll-snap-padding-left: hasnot;
  -ms-scroll-snap-padding-left: hasnot;
  scroll-snap-padding-left: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: has;
  -moz-scroll-snap-padding-left: has;
  -ms-scroll-snap-padding-left: has;
  scroll-snap-padding-left: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingLeft renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-left: invalid.path.1;
  -moz-scroll-snap-padding-left: invalid.path.1;
  -ms-scroll-snap-padding-left: invalid.path.1;
  scroll-snap-padding-left: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: invalid.path.1;
  -moz-scroll-snap-padding-left: invalid.path.1;
  -ms-scroll-snap-padding-left: invalid.path.1;
  scroll-snap-padding-left: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: invalid.path.1;
  -moz-scroll-snap-padding-left: invalid.path.1;
  -ms-scroll-snap-padding-left: invalid.path.1;
  scroll-snap-padding-left: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: invalid.path.1;
  -moz-scroll-snap-padding-left: invalid.path.1;
  -ms-scroll-snap-padding-left: invalid.path.1;
  scroll-snap-padding-left: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingLeft renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-left: -54881;
  -moz-scroll-snap-padding-left: -54881;
  -ms-scroll-snap-padding-left: -54881;
  scroll-snap-padding-left: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: -54881;
  -moz-scroll-snap-padding-left: -54881;
  -ms-scroll-snap-padding-left: -54881;
  scroll-snap-padding-left: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: -42365;
  -moz-scroll-snap-padding-left: -42365;
  -ms-scroll-snap-padding-left: -42365;
  scroll-snap-padding-left: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: -42365;
  -moz-scroll-snap-padding-left: -42365;
  -ms-scroll-snap-padding-left: -42365;
  scroll-snap-padding-left: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingLeft renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-left: July;
    -moz-scroll-snap-padding-left: July;
    -ms-scroll-snap-padding-left: July;
    scroll-snap-padding-left: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-left: August;
    -moz-scroll-snap-padding-left: August;
    -ms-scroll-snap-padding-left: August;
    scroll-snap-padding-left: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-left: September;
    -moz-scroll-snap-padding-left: September;
    -ms-scroll-snap-padding-left: September;
    scroll-snap-padding-left: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-left: November;
    -moz-scroll-snap-padding-left: November;
    -ms-scroll-snap-padding-left: November;
    scroll-snap-padding-left: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-left: July;
    -moz-scroll-snap-padding-left: July;
    -ms-scroll-snap-padding-left: July;
    scroll-snap-padding-left: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-left: August;
    -moz-scroll-snap-padding-left: August;
    -ms-scroll-snap-padding-left: August;
    scroll-snap-padding-left: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-left: September;
    -moz-scroll-snap-padding-left: September;
    -ms-scroll-snap-padding-left: September;
    scroll-snap-padding-left: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-left: November;
    -moz-scroll-snap-padding-left: November;
    -ms-scroll-snap-padding-left: November;
    scroll-snap-padding-left: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-left: May;
    -moz-scroll-snap-padding-left: May;
    -ms-scroll-snap-padding-left: May;
    scroll-snap-padding-left: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-left: June;
    -moz-scroll-snap-padding-left: June;
    -ms-scroll-snap-padding-left: June;
    scroll-snap-padding-left: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-left: April;
    -moz-scroll-snap-padding-left: April;
    -ms-scroll-snap-padding-left: April;
    scroll-snap-padding-left: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-left: November;
    -moz-scroll-snap-padding-left: November;
    -ms-scroll-snap-padding-left: November;
    scroll-snap-padding-left: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-left: May;
    -moz-scroll-snap-padding-left: May;
    -ms-scroll-snap-padding-left: May;
    scroll-snap-padding-left: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-left: June;
    -moz-scroll-snap-padding-left: June;
    -ms-scroll-snap-padding-left: June;
    scroll-snap-padding-left: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-left: April;
    -moz-scroll-snap-padding-left: April;
    -ms-scroll-snap-padding-left: April;
    scroll-snap-padding-left: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-left: November;
    -moz-scroll-snap-padding-left: November;
    -ms-scroll-snap-padding-left: November;
    scroll-snap-padding-left: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingLeft renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-snap-padding-left: July;
    -moz-scroll-snap-padding-left: July;
    -ms-scroll-snap-padding-left: July;
    scroll-snap-padding-left: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-left: August;
    -moz-scroll-snap-padding-left: August;
    -ms-scroll-snap-padding-left: August;
    scroll-snap-padding-left: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-left: September;
    -moz-scroll-snap-padding-left: September;
    -ms-scroll-snap-padding-left: September;
    scroll-snap-padding-left: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-left: November;
    -moz-scroll-snap-padding-left: November;
    -ms-scroll-snap-padding-left: November;
    scroll-snap-padding-left: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-left: August;
    -moz-scroll-snap-padding-left: August;
    -ms-scroll-snap-padding-left: August;
    scroll-snap-padding-left: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-snap-padding-left: July;
    -moz-scroll-snap-padding-left: July;
    -ms-scroll-snap-padding-left: July;
    scroll-snap-padding-left: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-left: August;
    -moz-scroll-snap-padding-left: August;
    -ms-scroll-snap-padding-left: August;
    scroll-snap-padding-left: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-left: September;
    -moz-scroll-snap-padding-left: September;
    -ms-scroll-snap-padding-left: September;
    scroll-snap-padding-left: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-left: November;
    -moz-scroll-snap-padding-left: November;
    -ms-scroll-snap-padding-left: November;
    scroll-snap-padding-left: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-left: August;
    -moz-scroll-snap-padding-left: August;
    -ms-scroll-snap-padding-left: August;
    scroll-snap-padding-left: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-padding-left: January;
    -moz-scroll-snap-padding-left: January;
    -ms-scroll-snap-padding-left: January;
    scroll-snap-padding-left: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-left: December;
    -moz-scroll-snap-padding-left: December;
    -ms-scroll-snap-padding-left: December;
    scroll-snap-padding-left: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-left: April;
    -moz-scroll-snap-padding-left: April;
    -ms-scroll-snap-padding-left: April;
    scroll-snap-padding-left: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-left: May;
    -moz-scroll-snap-padding-left: May;
    -ms-scroll-snap-padding-left: May;
    scroll-snap-padding-left: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-left: June;
    -moz-scroll-snap-padding-left: June;
    -ms-scroll-snap-padding-left: June;
    scroll-snap-padding-left: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-padding-left: January;
    -moz-scroll-snap-padding-left: January;
    -ms-scroll-snap-padding-left: January;
    scroll-snap-padding-left: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-left: December;
    -moz-scroll-snap-padding-left: December;
    -ms-scroll-snap-padding-left: December;
    scroll-snap-padding-left: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-left: April;
    -moz-scroll-snap-padding-left: April;
    -ms-scroll-snap-padding-left: April;
    scroll-snap-padding-left: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-left: May;
    -moz-scroll-snap-padding-left: May;
    -ms-scroll-snap-padding-left: May;
    scroll-snap-padding-left: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-left: June;
    -moz-scroll-snap-padding-left: June;
    -ms-scroll-snap-padding-left: June;
    scroll-snap-padding-left: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingLeft renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-left: 54881;
  -moz-scroll-snap-padding-left: 54881;
  -ms-scroll-snap-padding-left: 54881;
  scroll-snap-padding-left: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: 54881;
  -moz-scroll-snap-padding-left: 54881;
  -ms-scroll-snap-padding-left: 54881;
  scroll-snap-padding-left: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: 42365;
  -moz-scroll-snap-padding-left: 42365;
  -ms-scroll-snap-padding-left: 42365;
  scroll-snap-padding-left: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: 42365;
  -moz-scroll-snap-padding-left: 42365;
  -ms-scroll-snap-padding-left: 42365;
  scroll-snap-padding-left: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingLeft renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-left: July;
  -moz-scroll-snap-padding-left: July;
  -ms-scroll-snap-padding-left: July;
  scroll-snap-padding-left: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: July;
  -moz-scroll-snap-padding-left: July;
  -ms-scroll-snap-padding-left: July;
  scroll-snap-padding-left: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: June;
  -moz-scroll-snap-padding-left: June;
  -ms-scroll-snap-padding-left: June;
  scroll-snap-padding-left: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: June;
  -moz-scroll-snap-padding-left: June;
  -ms-scroll-snap-padding-left: June;
  scroll-snap-padding-left: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingLeft renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-left: DarkSlateBlue;
  -moz-scroll-snap-padding-left: DarkSlateBlue;
  -ms-scroll-snap-padding-left: DarkSlateBlue;
  scroll-snap-padding-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: DarkSlateBlue;
  -moz-scroll-snap-padding-left: DarkSlateBlue;
  -ms-scroll-snap-padding-left: DarkSlateBlue;
  scroll-snap-padding-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: DarkSlateBlue;
  -moz-scroll-snap-padding-left: DarkSlateBlue;
  -ms-scroll-snap-padding-left: DarkSlateBlue;
  scroll-snap-padding-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-left: DarkSlateBlue;
  -moz-scroll-snap-padding-left: DarkSlateBlue;
  -ms-scroll-snap-padding-left: DarkSlateBlue;
  scroll-snap-padding-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
